# Koral

./: .gitignore  CMakeLists.txt  Doxyfile  vcpkg.json
.github/workflows/: release.yml
cmake/: GFX_RELOADEDConfig.cmake.in  RegisterCMakePackage.cmake
docker/: linux-release.Dockerfile
docs/: configuration.md  errors.md  self-hosted-runner.md
include/: IconsFontAwesome6.h  accelerationStructure.h  barrier.ixx  buffer.h  buffer.ixx  builder.h  commandBuffer.h  commandBuffer.ixx  computePipeline.h  computePipeline.ixx  context.h  context.ixx  descriptor.h  descriptor.ixx  descriptorBinding.h  descriptorBinding.ixx  descriptorSet.h  descriptorSet.ixx  descriptorSetLayout.h  descriptorSetLayout.ixx  error.h  file.h  flags.h  flags.ixx  framebuffer.h  framebuffer.ixx  gfx.h  gfx.ixx  graphicsPipeline.h  graphicsPipeline.ixx  gtime.h  gui.h  gui.ixx  image.h  image.ixx  imageView.h  imageView.ixx  imfilebrowser.h  imgui-extra.h  importer.h  (+36 more)
include/imgui/: imgui.ixx
include/mesh/: mesh.ixx  meshBase.ixx  meshHeap.ixx  meshLayout.ixx  meshType.ixx  tlsfAllocator.h
scripts/: check-linux-portability.sh  check-macos-portability.sh
shaders/: albedo.frag.glsl  albedo.vert.glsl  compositePass.comp.glsl  doubleValues.comp.glsl  flatTriangle.frag.glsl  flatTriangle.vert.glsl  geometryPass.frag.glsl  geometryPass.vert.glsl  helpers.slang  meshTriangle.vert.glsl  pushColor.frag.glsl  sample.slang  sampleTexture.frag.glsl  sampleTexture.vert.glsl  simpleRT.rchit.glsl  simpleRT.rgen.glsl  simpleRT.rmiss.glsl  test.comp.glsl  topHalfImage.comp.glsl  topHalfQuad.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/: context.cpp  context.h  engine.cpp  log.h  main.cpp  sceneManager.h  stb.cpp
src/backends/open_gl/: buffer.cpp  buffer.h  buffer.ixx  commandBuffer.cpp  commandBuffer.h  commandBuffer.ixx  computePipeline.cpp  computePipeline.h  computePipeline.ixx  descriptorSet.cpp  descriptorSet.h  descriptorSet.ixx  framebuffer.cpp  framebuffer.h  framebuffer.ixx  graphicsPipeline.cpp  graphicsPipeline.h  graphicsPipeline.ixx  gui.cpp  gui.h  gui.ixx  image.cpp  image.h  image.ixx  imageView.cpp  imageView.h  imageView.ixx  ogl_err_handling.h  sampler.cpp  sampler.h  sampler.ixx  scheduler.cpp  scheduler.h  scheduler.ixx  shader.cpp  shader.h  shader.ixx  types.ixx
src/backends/vulkan/: accelerationStructure.cpp  accelerationStructure.h  allocator.cpp  allocator.h  allocator.ixx  buffer.cpp  buffer.h  buffer.ixx  commandBuffer.cpp  commandBuffer.h  commandBuffer.ixx  computePipeline.cpp  computePipeline.h  computePipeline.ixx  context.cpp  context.ixx  descriptorPool.cpp  descriptorPool.h  descriptorPool.ixx  descriptorSet.cpp  descriptorSet.h  descriptorSet.ixx  descriptorSetLayout.cpp  descriptorSetLayout.h  descriptorSetLayout.ixx  device.cpp  device.h  device.ixx  framebuffer.cpp  framebuffer.h  framebuffer.ixx  graphicsPipeline.cpp  graphicsPipeline.h  graphicsPipeline.ixx  gui.cpp  gui.h  gui.ixx  image.cpp  image.h  image.ixx  (+33 more)
src/core/: accelerationStructure.cpp  assimpImporter.h  assimpImporter.ixx  buffer.cpp  buffer.h  comandBuffer.cpp  comandBuffer.h  commandBuffer.cpp  computePipeline.cpp  computePipeline.h  context.cpp  descriptor.cpp  descriptorBinding.cpp  descriptorBinding.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  error.cpp  fileWatcher.cpp  fileWatcher.h  framebuffer.cpp  framebuffer.h  framebufferImage.cpp  framebufferImage.h  graphicsPipeline.cpp  graphicsPipeline.h  gui.cpp  gui.h  image.cpp  image.h  imageView.cpp  imageView.h  importer.cpp  importer.h  initLibs.cpp  input.cpp  log.cpp  mesh.cpp  mesh.h  (+20 more)
src/core/assimpImporter/: assimpImporter.h  vertexBufferLoader.h
src/core/resources/: buffer.cpp  buffer.h  comandBuffer.cpp  comandBuffer.h  computePipeline.cpp  computePipeline.h  descriptorBinding.cpp  descriptorBinding.h  framebuffer.cpp  framebuffer.h  graphicsPipeline.cpp  graphicsPipeline.h  image.cpp  image.h  imageView.cpp  imageView.h  importer.cpp  importer.h  mesh.cpp  mesh.h  sampler.cpp  sampler.h  shader.cpp  shader.h
src/executor/: BackgroundExecutor.h  BackgroundExecutor.ixx  MainThreadExecutor.h  MainThreadExecutor.ixx
src/impl/open_gl/: buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  computePipeline.cpp  computePipeline.h  descriptorBinding.cpp  descriptorBinding.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  framebuffer.cpp  framebuffer.h  graphicsPipeline.cpp  graphicsPipeline.h  image.cpp  image.h  imageView.h  mesh.cpp  mesh.h  sampler.cpp  sampler.h  scheduler.cpp  scheduler.h  shader.cpp  shader.h
src/impl/vulkan/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  computePipeline.cpp  computePipeline.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  device.h  (+25 more)
src/io/: input.cpp  input.h  manager.cpp  manager.h  time.cpp  time.h  window.cpp  window.h
src/lab/: labMesh.cpp  labMesh.h  labMultiFrameBuffer.cpp  labMultiFrameBuffer.h  labRectangle.cpp  labRectangle.h  labTriangle.cpp  labTriangle.h
src/project/: generate.h
src/scenes/: scene.h
src/utils/: file.h  meshType.h  ogl_err_handling.h  vk_enum_conversions.h  vk_wrapper.h
templates/: CMakeLists.txt  CMakePresets.json  cmake.xml  export.cpp  template.cpp  template.h  vcpkg.json
tests/: CMakeLists.txt  README.md  test_builder_recoverable.cpp  test_error.cpp  test_flags.cpp  test_log_repeat.cpp  test_mesh_layout.cpp  test_project_config.cpp  test_resource.cpp  test_structs.cpp  test_tlsf_allocator.cpp
tests/integration/: CMakeLists.txt  gpu_fixture.cpp  gpu_fixture.h  test_buffer_roundtrip.cpp  test_compute_dispatch.cpp  test_image_roundtrip.cpp  test_importer.cpp  test_offscreen_render.cpp  test_poison.cpp  test_raytracing.cpp  test_slang_shader.cpp  test_vulkan_coverage.cpp
tests/window/: CMakeLists.txt  orientation_shared.h  test_windowed.cpp  test_windowed_gl.cpp
vcpkg-overlay-ports/kubazip/: portfile.cmake
vcpkg-overlay-triplets/: arm64-osx.cmake  x64-windows-static-md.cmake
(+28 files in other folders)
